# sentinel

./: .gitignore  CLAUDE.md  README.md  component_map.yaml  constraints.yaml  pact.yaml  primer_chronicler.md  prompt.md  pyproject.toml  schema_hints.yaml  sops.md  task.md  trust_policy.yaml
.constrain/sessions/: a10f1744-d354-4456-b780-2748c576eebb.json
.kin/: code-map.json  config  index.json
.pact/: audit.jsonl  state.json
.pact/test-gen/: analysis.json  security_audit.md
contracts/src_sentinel_api/: interface.py
contracts/src_sentinel_arbiter/: interface.py
contracts/src_sentinel_attribution/: interface.py
contracts/src_sentinel_cli/: interface.py
contracts/src_sentinel_config/: interface.py
decomposition/: interview.json  tree.json
docs/: index.html
src/sentinel/: __init__.py  api.py  arbiter.py  attribution.py  chronicler.py  cli.py  config.py  contracts.py  events.py  fixer.py  git_ops.py  incidents.py  ledger.py  llm.py  manifest.py  notify.py  schemas.py  sentinel.py  severity.py  stigmergy.py  test_runner.py  triage.py  watcher.py
tests/: test_arbiter.py  test_attribution.py  test_chronicler.py  test_cli_serve.py  test_config.py  test_contracts.py  test_events.py  test_fixer.py  test_git_ops.py  test_incidents.py  test_manifest.py  test_notify.py  test_schemas.py  test_sentinel.py  test_severity.py  test_stigmergy.py  test_triage_cli.py  test_watcher.py
tests/smoke/: test_sentinel_api.py  test_sentinel_arbiter.py  test_sentinel_attribution.py  test_sentinel_cli.py  test_sentinel_config.py  test_sentinel_contracts.py  (+13 more)
(+13 files in other folders)
